# ActionsTestRepo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build-linux-vcpkg.sh  build-linux.sh  build-macos-brew.sh  build-macos-vcpkg.sh  build-macos.sh  build-msvc.bat  build-windows-test.bat  build.sh  pyproject.toml  setup.py  vcpkg.json
.github/workflows/: build-brew-b.yml  build-brew.yml  build-conda.yml  build-linux.yml  build-pip.yml  build-script-brew.yml  build-script-vcpkg.yml  build-script.yml  build-ubuntu.yml  build-vcpkg-dynamic.yml  build-vcpkg-old.yml  build-vcpkg.yml  build-win.yml  run-py.yml  test-macos-dynamic.yml  test.yml  vulkan-archive.yml  vulkan-ppa.yml
CMake/: RemoveFlagFromFile.cmake
Data/Shaders/: Blit.glsl  GammaCorrection.glsl  GaussianBlur.glsl  Mesh.glsl  Point.glsl  WhiteSolid.glsl  Wireframe.glsl  WireframeFocus.glsl  WireframeLod.glsl
Data/Shaders/Calculators/: EnsembleSpreadCalculator.glsl
Data/Shaders/LineDensityControl/: GaussianBlurFloatTexture.glsl
Data/Shaders/Renderers/Deferred/: GenerateHZB.glsl
Data/Shaders/Scattering/Clouds/: PNanoVDB.glsl
Data/Shaders/Utils/: PointToLineDistance.glsl
src/: Archive.cpp  main.cpp
src/Calculators/: SymmetrizerType.hpp
src/Graphics/Video/: VideoWriter.hpp
src/Graphics/Vulkan/libs/VMA/: vk_mem_alloc.h
src/Mesh/HexMesh/Loaders/: DatLoader.hpp
src/Optimization/DiffDVR/: DvrAdjointPass.hpp  SmoothingPriorLossPass.cpp
src/Optimization/OLS/: PrecisionDefines.hpp
src/Renderers/: LineRasterPass.hpp
src/Renderers/Diagram/: HEBChartUi.cpp  Region.hpp
src/Renderers/OIT/: MLABRenderer.hpp
src/Volume/: FieldType.hpp
submodules/IsosurfaceCpp/src/: MarchingCubes.hpp
test/: VolumetricPathTracingTestRenderer.hpp
