cmake_minimum_required(VERSION 3.12)
project(ActionsRepoTest)

set(CMAKE_CXX_STANDARD 17)

add_executable(ActionsRepoTest src/main.cpp)

target_link_libraries(ActionsRepoTest ${LibArchive_LIBRARIES})
target_include_directories(ActionsRepoTest PRIVATE ${LibArchive_INCLUDE_DIRS})

if ((UNIX AND NOT APPLE) OR MSYS)
    find_package(PkgConfig REQUIRED)
endif()

if(VCPKG_TOOLCHAIN)
    find_package(cppzmq CONFIG QUIET)
else()
    find_package(cppzmq QUIET)
endif()
if (${cppzmq_FOUND})
    target_link_libraries(ActionsRepoTest PRIVATE cppzmq)
    target_compile_definitions(ActionsRepoTest PRIVATE USE_ZEROMQ)
else()
    # https://stackoverflow.com/questions/41251474/how-to-import-zeromq-libraries-in-cmake/41252437
    pkg_check_modules(PC_ZeroMQ QUIET zmq)
    #if (${PC_ZeroMQ_FOUND})
        find_path(ZeroMQ_INCLUDE_DIRS NAMES zmq.hpp PATHS ${PC_ZeroMQ_INCLUDE_DIRS})
        find_library(ZeroMQ_LIBRARIES NAMES zmq PATHS ${PC_ZeroMQ_LIBRARY_DIRS})
        target_include_directories(ActionsRepoTest PRIVATE ${ZeroMQ_INCLUDE_DIRS})
        target_link_libraries(ActionsRepoTest PRIVATE ${ZeroMQ_LIBRARIES})
        if (${CMAKE_VERSION} VERSION_LESS "3.12")
            target_compile_definitions(ActionsRepoTest PRIVATE USE_ZEROMQ)
        else()
            add_compile_definitions(USE_ZEROMQ)
        endif()
    #endif()
endif()
